@@ -48,10 +48,13 @@ sub configure
         'ExecDir',
         'ShareDir',
 
+        # Finders
+        [ 'FileFinder::ByName' => Examples => { dir => 'examples' } ],
+
         # Gather Files
         [ 'Git::GatherDir'      => { exclude_filename => 'LICENSE' } ],
         qw(MetaYAML MetaJSON License Readme Manifest),
-        [ 'Test::Compile'       => { ':version' => '2.010', fail_on_warning => 'author', bail_out_on_fail => 1 } ],
+        [ 'Test::Compile'       => { ':version' => '2.010', fail_on_warning => 'author', bail_out_on_fail => 1, script_finder => [qw(:ExecFiles @Author::ETHER/Examples)] } ],
         [ 'Test::CheckDeps'     => { ':version' => '0.007', fatal => 1, level => 'suggests' } ],
         'NoTabsTests',
         'EOLTests',
@@ -189,10 +192,15 @@ following C<dist.ini> (following the preamble):
     [Readme]
     [Manifest]
 
+    [FileFinder::ByName / Examples]
+    dir = examples
+
     [Test::Compile]
     :version = 2.010
     fail_on_warning = author
     bail_out_on_fail = 1
+    script_finder = :ExecFiles
+    script_finder = Examples
 
     [Test::CheckDeps]
     :version = 0.007
